Displaying the Course list in our List View

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div class="container mt-4" id="main-layout">
+    <div class="container mb-4" id="main-layout">
         {{{body}}}
     </div>
 
