--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -1,18 +1,26 @@
 <div class="row mb-4">
     <div class="col-lg-12">
-        <h2>Courses:</h2>
-        <table>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-            </tr>
 
-        </table>
-        {{#each data}}
-        <tr>
-            <td>{{this.courseId}}</th>
-            <td>{{this.courseName}}</th>
-        </tr>
-        {{/each}}
+        <div class="page-header">
+            <h1>Courses</h1>
+        </div>
+
+        <div class="panel panel-primary">
+            <div class="panel-heading">List of all courses</div>
+            <div class="panel-body">
+                <table class="table table-striped table-bordered table-hover table-condensed">
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                    </tr>
+                    {{#each data}}
+                    <tr>
+                        <td>{{this.courseId}}</td>
+                        <td>{{this.courseName}}</td>
+                    </tr>
+                    {{/each}}
+                </table>
+            </div>
+        </div>
     </div>
 </div>
