--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -2,7 +2,8 @@
     <div class="col-lg-12">
 
         <div class="page-header">
-            <h1>Courses</h1>
+            <h1>Courses <small><a class="btn btn-primary pull-right" href="/course/add">Add new course +</a></small>
+            </h1>
         </div>
 
         <div class="panel panel-primary">
@@ -10,13 +11,17 @@
             <div class="panel-body">
                 <table class="table table-striped table-bordered table-hover table-condensed">
                     <tr>
-                        <th>ID</th>
+                        <th>Course ID</th>
                         <th>Name</th>
+                        <th>Duration</th>
+                        <th>Fees</th>
                     </tr>
                     {{#each data}}
                     <tr>
                         <td>{{this.courseId}}</td>
                         <td>{{this.courseName}}</td>
+                        <td>{{this.courseDuration}}</td>
+                        <td>{{this.courseFee}}</td>
                     </tr>
                     {{/each}}
                 </table>
